@@ -1,42 +1,14 @@
 MD5 5fe9de7cb40eda5ccac0d78cf3d1894d ChangeLog 4610
-RMD160 6b1a0588d5cab5126577d86267bdcabbe6fd0698 ChangeLog 4610
-SHA256 28a66ec55b9ea7cf6cd7300f6bc5ed6f642f5d6d0a187f216062030d909c5d44 ChangeLog 4610
 MD5 c5fa588b242d6077e2c13bc01f2e0761 files/digest-khangman-3.4.1 208
-RMD160 b75baa2e3a2543b8ef7fe86f2ee7d051fa758344 files/digest-khangman-3.4.1 208
-SHA256 d9d17c20dd4aa47149d5dbee8c627f5a45c4bd91c8c3bc75d59524e5f676afaf files/digest-khangman-3.4.1 208
 MD5 b190e5cce85ed284d453d1a2e85c1e67 files/digest-khangman-3.4.2 282
-RMD160 f2a1268561e24e46368658fbb1e8bc680eeaaf26 files/digest-khangman-3.4.2 282
-SHA256 85080ff055c6575eb61dc8f2c7ec8103cb76db1f0ecb0a11a71487b99d39a8b6 files/digest-khangman-3.4.2 282
 MD5 e6c244e749eb5eaea2195aab1a2b3f23 files/digest-khangman-3.4.3 67
-RMD160 ae69f787d923fc260a120bd99573c23dbfb6359c files/digest-khangman-3.4.3 67
-SHA256 398079facbd80df46961c1a5cf8861b0254c549679aaf8f55231dfa59a2415f3 files/digest-khangman-3.4.3 67
 MD5 9c4d55683f93bc4ade8253a467f2cdfb files/digest-khangman-3.5.0 67
-RMD160 cd5c61f5b518a68634d8e1609f9def054ca4076e files/digest-khangman-3.5.0 67
-SHA256 53c6a9aa5c5123f085dac625afa451306972c42a8984b82f07aade9ef6d7de32 files/digest-khangman-3.5.0 67
 MD5 f189373524a470a1665a94fe8ba1f935 files/digest-khangman-3.5.1 67
-RMD160 15ef63c56e7473ac57f09886f9a87dcd62fb5940 files/digest-khangman-3.5.1 67
-SHA256 8ff43bdecc2b0a273e26d59bb41fabd2164cd1353ff540bb15b665bc3aa69d5e files/digest-khangman-3.5.1 67
 MD5 ff544adf35a1e206ccc834b16497445e files/digest-khangman-3.5.2 247
-RMD160 63809ef9b895cfbeead9b40aa8f3c5e35f9071d6 files/digest-khangman-3.5.2 247
-SHA256 5a277716eb6b5efee584814aa595214200f062f4ee267e60620cf34558e89b1a files/digest-khangman-3.5.2 247
 MD5 4dedcc4fed51647a43272d0049888a63 khangman-3.4.1.ebuild 561
-RMD160 51c0615aa83abf828af8a91cada630b63ee55354 khangman-3.4.1.ebuild 561
-SHA256 ac0fe3071cb3da26c2b87440a34998970e26621ce32976d971b07e695f7837a8 khangman-3.4.1.ebuild 561
 MD5 55e6e6832fe5e34f563546ecd3bb5ff1 khangman-3.4.2.ebuild 574
-RMD160 2f8e1cfbee845684e72a1c75bc75461643727118 khangman-3.4.2.ebuild 574
-SHA256 e3e1af2153cd0ab0ae35a46aecc773005e2dbc6fb0c03686f9ece78228621108 khangman-3.4.2.ebuild 574
-MD5 d03361dc64a54dfab669f541cc84646b khangman-3.4.3.ebuild 570
-RMD160 f9aa70d88a8f90c4a3078c295038af4f1ff5ee87 khangman-3.4.3.ebuild 570
-SHA256 c08373223cf1caf03d017d600f16600bcb8d6c243aca768c19a0554058ff393b khangman-3.4.3.ebuild 570
+MD5 6e4ffcaeb497501b4b159d3dfef12d81 khangman-3.4.3.ebuild 575
 MD5 f6ee727b5d3c0381de812429db75a0f7 khangman-3.5.0.ebuild 540
-RMD160 f57108dd4c54a0ef8a17ba60e03347c2618f50b0 khangman-3.5.0.ebuild 540
-SHA256 4bf1eaadcbed72e91bd16c4ed2f9e6d225d898ff71bdc6dfcf9d9d00c8ae058f khangman-3.5.0.ebuild 540
 MD5 51578cdea375aa8e726f0515c878d03c khangman-3.5.1.ebuild 541
-RMD160 36727b37ea7f5aa0cd0701b25010cf5d5d317cde khangman-3.5.1.ebuild 541
-SHA256 d4e15332ee22fd472d978c0f3aed9841b2115c6507e4014b67c847f40c475272 khangman-3.5.1.ebuild 541
 MD5 a449e1a7a03a0b6e49d907538c6152d6 khangman-3.5.2.ebuild 541
-RMD160 197f8fc520e2636706777b9423afe7983ecb15ec khangman-3.5.2.ebuild 541
-SHA256 aa32cc6541cf24e844f70aa6025a731733d27a5dcde3e62512a149744392a226 khangman-3.5.2.ebuild 541
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
-RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
-SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a metadata.xml 156
