@@ -1,13 +1,13 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/khangman/khangman-3.4.3.ebuild,v 1.7 2005/12/10 19:54:52 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/khangman/khangman-3.4.3.ebuild,v 1.8 2006/03/24 23:03:37 agriffis Exp $
 KMNAME=kdeedu
 MAXKDEVER=$PV
 KM_DEPRANGE="$PV $MAXKDEVER"
 inherit kde-meta
 
 DESCRIPTION="Classical hangman game for KDE"
-KEYWORDS="alpha amd64 ppc ppc64 sparc x86"
+KEYWORDS="alpha amd64 ia64 ppc ppc64 sparc x86"
 IUSE=""
 DEPEND="$(deprange 3.4.2 $MAXKDEVER kde-base/libkdeedu)"
 OLDDEPEND="~kde-base/libkdeedu-$PV"
